--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "mobile",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
